--- a/MoneySplitter.Win10/CustomControls/ErrorDetailsControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/ErrorDetailsControl.xaml
@@ -11,26 +11,36 @@
     
     <UserControl.Resources>
         <ResourceDictionary>
-            <Style TargetType="StackPanel" x:Key="IssueStackPanelStyle">
-                <Setter Property="Background" Value="#feefe8"/>
-                <Setter Property="VerticalAlignment" Value="Top"/>
-                <Setter Property="HorizontalAlignment" Value="Stretch"/>
-            </Style>
-            <Style TargetType="TextBlock" x:Key="ErrorTitleTextBlockStyle">
-                <Setter Property="FontSize" Value="18"/>
-            </Style>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <Style TargetType="StackPanel" x:Key="IssueStackPanelStyle">
+                        <Setter Property="Background" Value="{StaticResource ErrorBackgroundCollor}"/>
+                        <Setter Property="VerticalAlignment" Value="Top"/>
+                        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                    </Style>
+                    <Style TargetType="TextBlock" x:Key="ErrorTitleTextBlockStyle">
+                        <Setter Property="FontSize" Value="18"/>
+                        <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
+                        <Setter Property="FontWeight" Value="Medium"/>
+                    </Style>
+                    <Style TargetType="TextBlock" x:Key="ErrorDescriptionTextBlockStyle">
+                        <Setter Property="FontSize" Value="16"/>
+                        <Setter Property="Foreground" Value="{StaticResource DarkGrayColorBrush}"/>
+                        <Setter Property="FontStyle" Value="Italic"/>
+                    </Style>
+                </ResourceDictionary>
+                <ResourceDictionary Source="../Styles/ColorsAndBrushes.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
     
     <StackPanel Style="{StaticResource IssueStackPanelStyle}"
                 Visibility="{x:Bind IsErrorVisable, Mode=OneWay}">
         <TextBlock Text="{x:Bind ErrorDetails. ErrorTitle, Mode=OneWay}"
-                   FontWeight="Bold"
-                   FontSize="18"/>
+                   Style="{StaticResource ErrorTitleTextBlockStyle}"/>
 
-        <TextBlock FontStyle="Italic"
-                   Text="{x:Bind ErrorDetails.ErrorDescription, Mode=OneWay}"
-                   FontSize="16"/>
+        <TextBlock Text="{x:Bind ErrorDetails.ErrorDescription, Mode=OneWay}"
+                   Style="{StaticResource ErrorDescriptionTextBlockStyle}"/>
 
     </StackPanel>
 </UserControl>
