--- a/MoneySplitter.Win10/CustomControls/TransactionStatusControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/TransactionStatusControl.xaml
@@ -13,17 +13,23 @@
         <SolidColorBrush x:Name="GreenBrush" Color="#47a439"/>
         <SolidColorBrush x:Name="YellowBrush" Color="#e69f2d"/>
         <SolidColorBrush x:Name="DarkBlueBrush" Color="#458ce4"/>
+        <Style TargetType="Border" x:Name="UserRoleLabelBorderStyle">
+            <Setter Property="Height" Value="22"/>
+            <Setter Property="Padding" Value="8,0,8,8"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Name="UserRoleLabelTextBlockStyle">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
     </UserControl.Resources>
     <Grid>
         <Border x:Name="UserRoleLabelBorder"
-                Height="22"
-                Padding="8,0,8,0"
-                VerticalAlignment="Center">
+                Style="{StaticResource UserRoleLabelBorderStyle}">
             <TextBlock x:Name="UserRoleLabel"
-                       FontSize="14"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Left"
-                       Foreground="White"/>
+                       Style="{StaticResource UserRoleLabelTextBlockStyle}"/>
         </Border>
     </Grid>
 </UserControl>
