--- a/MoneySplitter.Win10/CustomControls/CollaboratorControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/CollaboratorControl.xaml
@@ -11,42 +11,33 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
     <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary>
-                    <Style TargetType="Grid" x:Key="GridCollaboratorStyle">
-                        <Setter Property="Margin" Value="2,0,0,5"/>
-                    </Style>
-                    <Style TargetType="Button" x:Key="CollabaratorButtonStyle">
-                        <Setter Property="HorizontalAlignment" Value="Right"/>
-                        <Setter Property="VerticalAlignment"  Value="Center"/>
-                    </Style>
-                    <Style TargetType="Grid" x:Key="ProgressRingGridStyle">
-                        <Setter Property="VerticalAlignment" Value="Stretch"/>
-                        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                    </Style>
-                    <Style TargetType="StackPanel" x:Key="CollaboratorStackPanelStyle">
-                        <Setter Property="VerticalAlignment" Value="Center"/>
-                        <Setter Property="Margin" Value="7"/>
-                        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                    </Style>
+   
+                <Style TargetType="Grid" x:Key="GridCollaboratorStyle">
+                    <Setter Property="Margin" Value="2,0,0,5"/>
+                </Style>
+                <Style TargetType="Button" x:Key="CollabaratorButtonStyle">
+                    <Setter Property="HorizontalAlignment" Value="Right"/>
+                    <Setter Property="VerticalAlignment"  Value="Center"/>
+                </Style>
+                <Style TargetType="Grid" x:Key="ProgressRingGridStyle">
+                    <Setter Property="VerticalAlignment" Value="Stretch"/>
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                </Style>
+                <Style TargetType="StackPanel" x:Key="CollaboratorStackPanelStyle">
+                    <Setter Property="VerticalAlignment" Value="Center"/>
+                    <Setter Property="Margin" Value="7"/>
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                </Style>
 
-                    <Style TargetType="Ellipse" x:Key="EllipseCollaborattorImageStyle">
-                        <Setter Property="Width" Value="60"/>
-                        <Setter Property="Height" Value="60"/>
-                    </Style>
+                <Style TargetType="Ellipse" x:Key="EllipseCollaborattorImageStyle">
+                    <Setter Property="Width" Value="60"/>
+                    <Setter Property="Height" Value="60"/>
+                </Style>
 
-                    <Style TargetType="TextBlock" x:Key="CollaboratorCostTextStyle">
-                        <Setter Property="HorizontalAlignment" Value="Center" />
-                        <Setter Property="VerticalAlignment" Value="Center" />
-                    </Style>
-                </ResourceDictionary>
-                <ResourceDictionary Source="../Styles/GlobalStyles.xaml"/>
-
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-
-
+        <Style TargetType="TextBlock" x:Key="CollaboratorCostTextStyle">
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+        </Style>
     </UserControl.Resources>
     <Grid Style="{StaticResource GridCollaboratorStyle}">
         <Grid.ColumnDefinitions>
@@ -57,21 +48,21 @@
             <ColumnDefinition Width = "2*"/>
         </Grid.ColumnDefinitions>
         <local:ArrowsControl Value = "{x:Bind ViewModel.CollaboratorStatus, Mode=OneWay}"/>
-        <Ellipse Style="{StaticResource EllipseCollaborattorImageStyle}"
-                 Grid.Column = "1">
+        <Ellipse Style="{StaticResource MobileUserImageEllipseStyle}"
+                 Grid.Column="1">
             <Ellipse.Fill>
                 <ImageBrush ImageSource = "{x:Bind ViewModel.ImageUrl, Mode=OneWay}"
-                            Stretch="UniformToFill"/>
+                                Stretch="UniformToFill"/>
             </Ellipse.Fill>
         </Ellipse>
         <StackPanel Style="{StaticResource CollaboratorStackPanelStyle}"
                     Grid.Column = "2">
-            <TextBlock Style="{StaticResource FullNameTextStyle}"
+            <TextBlock Style="{StaticResource UserControlFullNameTextStyle}"
                        Text="{x:Bind ViewModel.FullName, Mode=OneWay}">
 
             </TextBlock>
             <TextBlock Text="{x:Bind ViewModel.Email, Mode=OneWay}"
-                       Style="{StaticResource EmailNameTextStyle}"/>
+                       Style="{StaticResource UserControlAditionInformationTextStyle}"/>
         </StackPanel >
         <TextBlock  Grid.Column="3"
                     Style="{StaticResource CollaboratorCostTextStyle}">
