--- a/MoneySplitter.Win10/CustomControls/DesktopUserContol.xaml
+++ b/MoneySplitter.Win10/CustomControls/DesktopUserContol.xaml
@@ -12,45 +12,46 @@
     d:DesignWidth="400">
     <UserControl.Resources>
         <converters:OppositeBoolToVisibilityConverter x:Key="OppositeBoolToVisibilityConverter"/>
-        <Style TargetType="StackPanel" x:Key="CollaboratorStackPanelStyle">
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Margin" Value="7"/>
+        <Style TargetType="Grid" x:Key="DesktopUserGridStyle">
+            <Setter Property="Margin" Value="5"/>
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
         </Style>
-
-        <Style TargetType="TextBlock" x:Key="BaseCollaboratorTextStyle">
-            <Setter Property="IsTextSelectionEnabled" Value="True" />
-            <Setter Property="HorizontalAlignment" Value="Stretch" />
+        <Style TargetType="TextBlock" BasedOn="{StaticResource UserControlFullNameTextStyle}" x:Name="DesktopUserFullNameStyle">
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
         </Style>
-        
+        <Style TargetType="TextBlock" BasedOn="{StaticResource UserControlAditionInformationTextStyle}" x:Name="DesktopUserEmailStyle">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
         <Style TargetType="Ellipse" x:Key="EllipseUserImageStyle">
             <Setter Property="Width" Value="120"/>
             <Setter Property="Height" Value="120"/>
         </Style>
-        
+        <Style TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}" x:Name="UserActionButtonStyle">
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="Foreground" Value="{StaticResource DarkGrayColorBrush}"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Height" Value="28"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
     </UserControl.Resources>
-    <Grid Margin="5"
-          HorizontalAlignment="Stretch">
+    <Grid Style="{StaticResource DesktopUserGridStyle}">
         <StackPanel>
-            <Ellipse Width="120" Height="120" >
+            <Ellipse Style="{StaticResource EllipseUserImageStyle}" >
                 <Ellipse.Fill>
                     <ImageBrush ImageSource="{x:Bind ViewModel.ImageUrl, Mode=OneWay}"
                                 Stretch="UniformToFill"/>
                 </Ellipse.Fill>
             </Ellipse>
-            <TextBlock IsTextSelectionEnabled="True" 
-                       TextTrimming="CharacterEllipsis"
-                       HorizontalAlignment="Stretch">
+            <TextBlock Style="{StaticResource DesktopUserFullNameStyle}">
                     <Run Text="{x:Bind ViewModel.Name, Mode=OneWay}" />
-                    <Run Text=" "/>
                     <Run Text="{x:Bind ViewModel.Surname, Mode=OneWay}"/>
              </TextBlock>
             <TextBlock Text="{x:Bind ViewModel.Email, Mode=OneWay}"
-                       HorizontalAlignment="Stretch"
-                       TextTrimming="CharacterEllipsis"/>
+                       Style="{StaticResource DesktopUserEmailStyle}"/>
             <Button Click="OnAddOrRemoveButtonClick" 
-                    Style="{ThemeResource TextBlockButtonStyle}"
-                    HorizontalAlignment="Center">
+                    Style="{StaticResource UserActionButtonStyle}">
                 <Button.Content>
                     <Grid>
                         <TextBlock extensions:XamlElementExtensions.Resource="REMOVE_BUTTON_CONTENT"
@@ -60,8 +61,6 @@
                     </Grid>
                 </Button.Content>
             </Button>
-
-
         </StackPanel>
     </Grid>
 </UserControl>
