--- a/MoneySplitter.Win10/Views/FriendDetailsView.xaml
+++ b/MoneySplitter.Win10/Views/FriendDetailsView.xaml
@@ -48,7 +48,7 @@
                     <SolidColorBrush Color="#FFFFFF" Opacity="0.8" />
                 </Grid.Background>
                 <Grid Margin="8,0,0,0">
-                    <customControls:UserDetailsControl ViewModel="{x:Bind ViewModel.Friend}"/>
+                    <customControls:UserDetailsControl ViewModel="{x:Bind ViewModel.Friend, Mode=OneWay}"/>
                 </Grid>
                 <StackPanel Orientation="Horizontal"
                         Grid.Column="1">
