--- a/MoneySplitter.Win10/Styles/Views/LoginViewStyle.xaml
+++ b/MoneySplitter.Win10/Styles/Views/LoginViewStyle.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
-
-    <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="../GlobalStyles.xaml"/>
-    </ResourceDictionary.MergedDictionaries>
-
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Style TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}" x:Key="LoginViewButtonStyle">
+        <Setter Property="Background" Value="ForestGreen"/>
+        <Setter Property="Padding" Value="2"/>
+    </Style>
 </ResourceDictionary>
