--- a/MoneySplitter.Win10/CustomControls/LoadRingControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/LoadRingControl.xaml
@@ -9,7 +9,7 @@
     d:DesignWidth="400">
     <UserControl.Resources>
         <Style TargetType="ProgressRing" x:Key="ProgressRingStyle">
-            <Setter Property="Foreground" Value="{StaticResource ProgressRingColor}"/>
+            <Setter Property="Foreground" Value="{StaticResource DefaultAppColor}"/>
             <Setter Property="Width" Value="68"/>
             <Setter Property="Height" Value="68"/>
         </Style>
