--- a/MoneySplitter.Win10/Styles/GlobalStyles.xaml
+++ b/MoneySplitter.Win10/Styles/GlobalStyles.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:MoneySplitter.Win10.Styles">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ColorsAndBrushes.xaml"/>
         <ResourceDictionary Source="Icons.xaml"/>
@@ -88,5 +87,22 @@
     </Style>
     <Style TargetType="FontIcon" x:Key="ButtonContentFontIconStyle">
         <Setter Property="FontSize" Value="12"/>
+    </Style>
+    <Style TargetType="StackPanel" x:Key="DefaultFormsStackPanelStyle">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="DefaultUserMessageStyle">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="22"/>
+        <Setter Property="Foreground" Value="{StaticResource DefaultAppColor}"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="DefaultHeaderViewStyle">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="40,4,8,0"/>
+        <Setter Property="FontSize" Value="26"/>
+        <Setter Property="Foreground" Value="{StaticResource DefaultAppColor}"/>
     </Style>
 </ResourceDictionary>
