--- a/MoneySplitter.Win10/Styles/Views/LoginViewStyle.xaml
+++ b/MoneySplitter.Win10/Styles/Views/LoginViewStyle.xaml
@@ -1,8 +1,11 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}" x:Key="LoginViewButtonStyle">
-        <Setter Property="Background" Value="ForestGreen"/>
-        <Setter Property="Padding" Value="2"/>
+        <Setter Property="Height" Value="32"/>
+        <Setter Property="Padding" Value="6"/>
+        <Setter Property="Margin" Value="0,2,16,2"/>
+    </Style>
+    <Style TargetType="StackPanel" x:Key="ButtonsStackPanelStyle">
+        <Setter Property="Margin" Value="4,4,0,0"/>
     </Style>
 </ResourceDictionary>
