--- a/MoneySplitter.Win10/Views/FriendsView.xaml
+++ b/MoneySplitter.Win10/Views/FriendsView.xaml
@@ -1,42 +1,29 @@
-﻿<Page
-    x:Class="MoneySplitter.Win10.Views.FriendsView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
-    xmlns:models="using:MoneySplitter.Models"
-    xmlns:extensions="using:MoneySplitter.Win10.Extensions"
-    mc:Ignorable="d">
-
+﻿<Page x:Class="MoneySplitter.Win10.Views.FriendsView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:MoneySplitter.Win10.Views"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
+      xmlns:models="using:MoneySplitter.Models"
+      xmlns:extensions="using:MoneySplitter.Win10.Extensions"
+      mc:Ignorable="d">
+    <Page.Resources>
+        <ResourceDictionary Source="../Styles/Views/FriendsViewStyle.xaml"/>
+    </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup x:Name="AdaptiveVisualStateGroup">
-                <VisualState x:Name="Normal">
-                    <VisualState.Setters>
-                        <Setter Target="FriendsList.Visibility" Value="Collapsed"></Setter>
-                        <Setter Target="FriendsGridView.Visibility" Value="Visible"></Setter>
-                    </VisualState.Setters>
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="700"></AdaptiveTrigger>
-                    </VisualState.StateTriggers>
-                </VisualState>
-                <VisualState x:Name="Mobile">
-                    <VisualState.Setters>
-                        <Setter Target="FriendsList.Visibility" Value="Visible"></Setter>
-                        <Setter Target="FriendsGridView.Visibility" Value="Collapsed"></Setter>
-                    </VisualState.Setters>
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0"></AdaptiveTrigger>
-                    </VisualState.StateTriggers>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBlock x:Name="FriendsHeader"
+                   extensions:XamlElementExtensions.Resource="FRIENDS_HEADER_TEXT_BLOCK"
+                   Style="{StaticResource DefaultHeaderViewStyle}"/>
         <ListView x:Name="FriendsList"
-                  HorizontalContentAlignment="Stretch"
                   ItemsSource="{x:Bind ViewModel.Friends, Mode=OneWay}"
-                  IsItemClickEnabled="True">
+                  Style="{StaticResource FriendsListStyle}"
+                  ItemClick="OnFriendClick"
+                  Grid.Row="1">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -46,19 +33,17 @@
                 <DataTemplate x:DataType="models:UserModel">
                     <customControls:MobileUserControl ViewModel="{x:Bind Mode=OneWay}"
                                                       IsRemove="True"
-                                                      IsButtonVisible="True"
-                                                      HorizontalAlignment="Stretch"
+                                                      IsButtonVisible="True"         
                                                       OnAddOrRemoveItemClick="OnRemoveItemClick"/>
-
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
 
         <GridView x:Name="FriendsGridView"
                   ItemsSource="{x:Bind ViewModel.Friends, Mode=OneWay}"
-                  Visibility="Visible"
-                  IsItemClickEnabled="True"
-                  ItemClick="OnFriendClick">
+                  Style="{StaticResource FriendsGridViewStyle}"
+                  ItemClick="OnFriendClick"
+                  Grid.Row="1">
             <GridView.ItemContainerStyle>
                 <Style TargetType="GridViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -72,14 +57,40 @@
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
-        <TextBlock VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   Foreground="#2C404B"
-                   FontSize="18"
+        <TextBlock Style="{StaticResource DefaultUserMessageStyle}"
                    extensions:XamlElementExtensions.Resource="NOT_FRIENDS_TEXTBLOCK_TEXT"
-                   Visibility="{x:Bind ViewModel.IsNotFriendsTextVisibility, Mode=OneWay}"/>
+                   Visibility="{x:Bind ViewModel.IsNotFriendsTextVisibility, Mode=OneWay}"
+                   Grid.Row="1"/>
         <customControls:ErrorDetailsControl IsErrorVisable="{x:Bind ViewModel.IsErrorVisible, Mode=OneWay}"
+                                            Grid.Row="1"
                                             ErrorDetails="{x:Bind ViewModel.ErrorDetailsModel, Mode=OneWay}"/>
-        <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsLoading, Mode=OneWay}"/>
+        <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.IsLoading, Mode=OneWay}"
+                                        Grid.Row="1"/>
+
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="AdaptiveVisualStateGroup">
+                <VisualState x:Name="Normal">
+                    <VisualState.Setters>
+                        <Setter Target="FriendsList.Visibility" Value="Collapsed"/>
+                        <Setter Target="FriendsGridView.Visibility" Value="Visible"/>
+                        <Setter Target="FriendsHeader.Visibility" Value="Collapsed"/>
+
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="640"></AdaptiveTrigger>
+                    </VisualState.StateTriggers>
+                </VisualState>
+                <VisualState x:Name="Mobile">
+                    <VisualState.Setters>
+                        <Setter Target="FriendsList.Visibility" Value="Visible"/>
+                        <Setter Target="FriendsGridView.Visibility" Value="Collapsed"/>
+                        <Setter Target="FriendsHeader.Visibility" Value="Visible"/>
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0"></AdaptiveTrigger>
+                    </VisualState.StateTriggers>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
     </Grid>
 </Page>
