--- a/MoneySplitter.Win10/Views/RegisterView.xaml
+++ b/MoneySplitter.Win10/Views/RegisterView.xaml
@@ -9,13 +9,11 @@
     xmlns:extensions="using:MoneySplitter.Win10.Extensions"
     mc:Ignorable="d">
     <Page.Resources>
-        <ResourceDictionary Source="../Styles/GlobalStyles.xaml"/>
+        <ResourceDictionary Source="../Styles/Views/RegisterViewStyle.xaml"/>
     </Page.Resources>
     
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <StackPanel VerticalAlignment="Center"
-                    HorizontalAlignment="Center"
-                    Padding="5">
+        <StackPanel Style="{StaticResource DefaultFormsStackPanelStyle}">
 
             <TextBox extensions:XamlElementExtensions.Resource="EMAIL_PLACEHOLDER_TEXT"
                      Text="{x:Bind ViewModel.RegisterModel.Email, Mode=TwoWay}"
@@ -45,30 +43,36 @@
             <TextBox extensions:XamlElementExtensions.Resource="NUMBER_PHONE_PLACEHOLDER_TEXT"
                      Text="{x:Bind ViewModel.RegisterModel.PhoneNumber, Mode=TwoWay}"
                      Style="{StaticResource DefaultTextBoxStyle}"/>
-
-            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
                 <TextBlock Text="{x:Bind ViewModel.LabelForAvatarImage, Mode=OneWay}"
-                           Margin="0,0,5,0"
-                           VerticalAlignment="Center"/>
+                            Style="{StaticResource BrowseLabelTextBlockStyle}"/>
 
                 <Button extensions:XamlElementExtensions.Resource="BROWSE_BUTTON_CONTENT"
                         Click="OnBrowseAvatarImage"
-                        HorizontalAlignment="Right"/>
-            </StackPanel>
+                        Grid.Column="1"
+                        Style="{StaticResource BrowseButtonStyle}"/>
+            </Grid>
 
-            <StackPanel Orientation="Horizontal"  Margin="0,10,0,0">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
                 <TextBlock Text="{x:Bind ViewModel.LabelForBackgroundImage, Mode=OneWay}"
-                           Margin="0,0,5,0"
-                           VerticalAlignment="Center"/>
+                           Style="{StaticResource BrowseLabelTextBlockStyle}"/>
                 <Button extensions:XamlElementExtensions.Resource="BROWSE_BUTTON_CONTENT"
                         Click="OnBrowseBackgroundImage"
-                        HorizontalAlignment="Right"/>
-            </StackPanel>
+                        Style="{StaticResource BrowseButtonStyle}"
+                        Grid.Column="1"/>
+            </Grid>
 
             <Button extensions:XamlElementExtensions.Resource="REGISTER_BUTTON_CONTENT"
                     Click="OnRegisterButtonClick"
-                    Margin="5"
-                    HorizontalAlignment="Center"/>
+                    Style="{StaticResource RegisterButtonStyle}"/>
         </StackPanel>
         <customControls:ErrorDetailsControl IsErrorVisable="{x:Bind ViewModel.IsErrorVisible, Mode=OneWay}"
                                             ErrorDetails="{x:Bind ViewModel.ErrorDetailsModel, Mode=OneWay}"/>
