--- a/MoneySplitter.Win10/Views/SearchUsersView.xaml
+++ b/MoneySplitter.Win10/Views/SearchUsersView.xaml
@@ -1,49 +1,33 @@
-﻿<Page
-    x:Class="MoneySplitter.Win10.Views.SearchUsersView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
-    xmlns:models="using:MoneySplitter.Models"
-    xmlns:extensions="using:MoneySplitter.Win10.Extensions"
-    mc:Ignorable="d">
-    
+﻿<Page x:Class="MoneySplitter.Win10.Views.SearchUsersView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
+      xmlns:models="using:MoneySplitter.Models"
+      xmlns:extensions="using:MoneySplitter.Win10.Extensions"
+      mc:Ignorable="d">
+    <Page.Resources>
+        <ResourceDictionary Source="../Styles/Views/SearchViewStyle.xaml"/>
+    </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-                <RowDefinition Height="32"/>
-                <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup x:Name="AdaptiveVisualStateGroup">
-                <VisualState x:Name="Normal">
-                    <VisualState.Setters>
-                        <Setter Target="UsersList.Visibility" Value="Collapsed"></Setter>
-                        <Setter Target="UsersGridView.Visibility" Value="Visible"></Setter>
-                    </VisualState.Setters>
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="700"></AdaptiveTrigger>
-                    </VisualState.StateTriggers>
-                </VisualState>
-                <VisualState x:Name="Mobile">
-                    <VisualState.Setters>
-                        <Setter Target="UsersList.Visibility" Value="Visible"></Setter>
-                        <Setter Target="UsersGridView.Visibility" Value="Collapsed"></Setter>
-                    </VisualState.Setters>
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0"></AdaptiveTrigger>
-                    </VisualState.StateTriggers>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
+        <TextBlock x:Name="SearchHeader"
+                   extensions:XamlElementExtensions.Resource="SEARCH_HEADER_TEXT_BLOCK"
+                   Style="{StaticResource DefaultHeaderViewStyle}"/>
         <TextBox extensions:XamlElementExtensions.Resource="SEARCH_TEXTBOX_EMPTY_PLACEHOLDER_TEXT"
-                 TextChanged="OnTextBoxTextChanged"/>
+                 Style="{StaticResource SearchTextBoxStyle}"
+                 TextChanged="OnTextBoxTextChanged"
+                  Grid.Row="1"/>
+
         <ListView x:Name="UsersList"
-                  Grid.Row="1"
-                  ItemsSource="{x:Bind ViewModel.SearchEngine.Results, Mode=OneWay}"
-                  IsItemClickEnabled="True">
+                      Grid.Row="2"
+                      ItemsSource="{x:Bind ViewModel.SearchEngine.Results, Mode=OneWay}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -60,9 +44,8 @@
             </ListView.ItemTemplate>
         </ListView>
         <GridView x:Name="UsersGridView"
-                  Grid.Row="1"
-                  ItemsSource="{x:Bind ViewModel.SearchEngine.Results, Mode=OneWay}"
-                  Visibility="Visible">
+                  Grid.Row="2"
+                  ItemsSource="{x:Bind ViewModel.SearchEngine.Results, Mode=OneWay}">
             
             <GridView.ItemTemplate>
                 <DataTemplate x:DataType="models:UserModel">
@@ -73,16 +56,38 @@
             </GridView.ItemTemplate>
         </GridView>
         
-        <TextBlock VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   Foreground="#2C404B"
-                   FontSize="18"
-                   Grid.Row="1"
+        <TextBlock Style="{StaticResource DefaultUserMessageStyle}"
+                   Grid.Row="2"
                    Text="{x:Bind ViewModel.SearchEngine.StatusMessage, Mode=OneWay}"
                    Visibility="{x:Bind ViewModel.SearchEngine.IsStatusMessageVisible, Mode=OneWay}"/>
         
         <customControls:LoadRingControl IsActiveRing="{x:Bind ViewModel.SearchEngine.IsSearchInProgress, Mode=OneWay}"
-                                        Grid.Row="1"/>
+                                        Grid.Row="2"/>
+
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="AdaptiveVisualStateGroup">
+                <VisualState x:Name="Normal">
+                    <VisualState.Setters>
+                        <Setter Target="UsersList.Visibility" Value="Collapsed"/>
+                        <Setter Target="UsersGridView.Visibility" Value="Visible"/>
+                        <Setter Target="SearchHeader.Visibility" Value="Collapsed"/>
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="640"></AdaptiveTrigger>
+                    </VisualState.StateTriggers>
+                </VisualState>
+                <VisualState x:Name="Mobile">
+                    <VisualState.Setters>
+                        <Setter Target="UsersList.Visibility" Value="Visible"/>
+                        <Setter Target="UsersGridView.Visibility" Value="Collapsed"/>
+                        <Setter Target="SearchHeader.Visibility" Value="Visible"/>
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0"></AdaptiveTrigger>
+                    </VisualState.StateTriggers>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
 
     </Grid>
 </Page>
