--- a/MoneySplitter.Win10/Styles/ColorsAndBrushes.xaml
+++ b/MoneySplitter.Win10/Styles/ColorsAndBrushes.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:MoneySplitter.Win10.Styles">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <SolidColorBrush x:Key="AdditionCallobartorCountColor" Color="#5c5c5c"/>
     <SolidColorBrush x:Key="Border" Color="#c5c5c5"/>
