--- a/MoneySplitter.Win10/Views/IncomingAndOutgoingView.xaml
+++ b/MoneySplitter.Win10/Views/IncomingAndOutgoingView.xaml
@@ -1,19 +1,18 @@
-﻿<Page
-    x:Class="MoneySplitter.Win10.Views.IncomingAndOutgoingView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:models="using:MoneySplitter.Models"
-    xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
-    xmlns:extensions="using:MoneySplitter.Win10.Extensions"
-    mc:Ignorable="d">
+﻿<Page x:Class="MoneySplitter.Win10.Views.IncomingAndOutgoingView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:models="using:MoneySplitter.Models"
+      xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
+      xmlns:extensions="using:MoneySplitter.Win10.Extensions"
+      mc:Ignorable="d">
+    <Page.Resources>
+        <ResourceDictionary Source="../Styles/Views/IncomingAndOutgoingViewStyle.xaml"/>
+    </Page.Resources>
     <Grid>
         <ScrollViewer>
-            <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-          ScrollViewer.VerticalScrollMode="Enabled"
-          ScrollViewer.VerticalScrollBarVisibility="Auto">
+            <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition x:Name="RightColumn"
@@ -28,14 +27,11 @@
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock VerticalAlignment="Center"
-                       HorizontalAlignment="Center"
-                       Foreground="#2C404B"
-                       FontSize="18"
-                       extensions:XamlElementExtensions.Resource="DEBTERS_TEXTBLOCK_TEXT"/>
+                    <TextBlock Style="{StaticResource DefaultHeaderListStyle}"
+                               extensions:XamlElementExtensions.Resource="DEBTERS_TEXTBLOCK_TEXT"/>
                     <ListView x:Name="DebtorsList"
                           ItemsSource="{x:Bind ViewModel.Debtors, Mode=OneWay}"
-                          IsItemClickEnabled="True"
+                          Style="{StaticResource DebtersAndLendPersonsListStyle}"
                           Grid.Row="1">
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
@@ -45,31 +41,26 @@
                         <ListView.ItemTemplate>
                             <DataTemplate x:DataType="models:CollaboratorModel">
                                 <customControls:CollaboratorControl ViewModel="{x:Bind Mode=OneWay}"
-                                                                OnRemindCollaboratorButtonClick="OnRemindCollaboratorButtonClick"
-                                                                OnApproveCollaboratorButtonClick="OnApproveCollaboratorButtonClick"/>
-
-
+                                                                    OnRemindCollaboratorButtonClick="OnRemindCollaboratorButtonClick"
+                                                                    OnApproveCollaboratorButtonClick="OnApproveCollaboratorButtonClick"/>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
                 </Grid>
                 <Grid  x:Name="LendPersonsListGrid"
-                   Grid.Column="1"
-                   Grid.Row="0">
+                       Grid.Column="1"
+                       Grid.Row="0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock VerticalAlignment="Center"
-                       HorizontalAlignment="Center"
-                       Foreground="#2C404B"
-                       FontSize="18"
-                      extensions:XamlElementExtensions.Resource="LEND_PERSONS_TEXTBLOCK_TEXT"/>
+                    <TextBlock Style="{StaticResource DefaultHeaderListStyle}"
+                               extensions:XamlElementExtensions.Resource="LEND_PERSONS_TEXTBLOCK_TEXT"/>
 
                     <ListView x:Name="LendPersonsList"
                           ItemsSource="{x:Bind ViewModel.LendPersons, Mode=OneWay}"
-                          IsItemClickEnabled="True"
+                          Style="{StaticResource DebtersAndLendPersonsListStyle}"
                           Grid.Row="1">
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
