--- a/MoneySplitter.Win10/Views/TransactionsView.xaml
+++ b/MoneySplitter.Win10/Views/TransactionsView.xaml
@@ -1,55 +1,44 @@
 ﻿<Page x:Class="MoneySplitter.Win10.Views.TransactionsView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:MoneySplitter.Win10.Views"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:customControls="using:MoneySplitter.Win10.CustomControls"
       xmlns:models="using:MoneySplitter.Models"
-      xmlns:modelsApp="using:MoneySplitter.Models.App"
       xmlns:extensions="using:MoneySplitter.Win10.Extensions"     
       mc:Ignorable="d">
+    
     <Page.Resources>
-        <ResourceDictionary Source="../Styles/GlobalStyles.xaml"/>
+        <ResourceDictionary Source="../Styles/Views/TransactionsViewStyle.xaml"/>
     </Page.Resources>
 
     <ScrollViewer>
-        <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-          ScrollViewer.VerticalScrollMode="Enabled"
-          ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <TextBlock VerticalAlignment="Center"
-                       HorizontalAlignment="Center"
-                       Foreground="#2C404B"
-                       FontSize="18"
+        <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <TextBlock Style="{StaticResource DefaultUserMessageStyle}"
                        extensions:XamlElementExtensions.Resource="NOT_TRANSACTIONS_TEXTBLOCK_TEXT"
                        Visibility="{x:Bind ViewModel.IsNotTransactionsTextVisibility, Mode=OneWay}"/>
             <StackPanel>
                 <StackPanel Orientation="Horizontal"
-                            Margin="0,16,24 ,16"
-                            HorizontalAlignment="Right">
+                            Style="{StaticResource MainButtonsStackPanelStyle}">
                     <Button Click="OnAddTransactionButtonClick"
-                            Style="{StaticResource DefaultButtonStyle}"
-                            Margin="0,0,8,0">
+                            Style="{StaticResource AddButtonStyle}">
                         <Button.Content>
                             <StackPanel Orientation="Horizontal">
-                                <FontIcon Glyph="&#xE109;"
+                                <FontIcon Style="{StaticResource AddFontIconStyle}"
                                           FontSize="12"/>
                                 <TextBlock extensions:XamlElementExtensions.Resource="ADD_HIGH_REGISTR_BUTTON_CONTENT"
-                                            FontSize="14"
-                                            Margin="8,0,0,0"/>
-
+                                           Style="{StaticResource MainButtonContentTextStyle}"/>
                             </StackPanel>
                         </Button.Content>
                     </Button>
                     <ComboBox ItemsSource="{x:Bind ViewModel.SortModels, Mode=OneWay}"
                               SelectedItem="{x:Bind ViewModel.SelectTypeSort, Mode=TwoWay}"
                               SelectionChanged="OnSelectSortParameter"
-                              BorderThickness="1"
-                              BorderBrush="{StaticResource Border}"
-                              Height="36">
+                              Style="{StaticResource SortedParameterComboBoxStyle}">
                         <ComboBox.ItemTemplate>
                             <DataTemplate x:DataType="models:SortModel">
-                            <TextBlock Text="{x:Bind Title, Mode=OneWay}"/>
+                            <TextBlock Text="{x:Bind Title, Mode=OneWay}"
+                                       Style="{StaticResource SortedParameterTextStyle}"/>
                         </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
@@ -57,11 +46,8 @@
 
                 <ListView x:Name="TransactionsList"
                           ItemsSource="{x:Bind ViewModel.Transactions, Mode=OneWay}"
-                          IsItemClickEnabled="True"
-                          SelectionMode="None"
-                          ItemClick="OnTransactionItemClick"
-                          ScrollViewer.VerticalScrollMode="Enabled"
-                          ScrollViewer.VerticalScrollBarVisibility="Visible">
+                          Style="{StaticResource TransactionsListViewStyle}"
+                          ItemClick="OnTransactionItemClick">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -70,13 +56,10 @@
                     <ListView.ItemTemplate>
 
                         <DataTemplate x:DataType="models:TransactionEventModel">
-                            <Grid Margin="12,12,12,0">
-                                <Border BorderThickness="0,0,0,1"
-                                        BorderBrush="{StaticResource Border}">
-                                    <Grid Padding="0,0,0,12">
+                            <Grid Style="{StaticResource TransactionGridStyle}">
+                                <Border Style="{StaticResource DefaultTransactionBorderStyle}">
                                     <customControls:TransactionEventControl ViewModel="{x:Bind Mode=OneWay}"
                                                                             OnGiveTransactionButtonClick="OnGiveCollaboratorButtonClick"/>
-                                    </Grid>
                                 </Border>
                             </Grid>
                         </DataTemplate>
