--- a/MoneySplitter.Win10/Styles/Icons.xaml
+++ b/MoneySplitter.Win10/Styles/Icons.xaml
@@ -7,5 +7,5 @@
     <x:String x:Key="AddIcon">&#xE710;</x:String>
     <x:String x:Key="RemoveIcon">&#xE738;</x:String>
     <x:String x:Key="GiveIcon">&#xF0AD;</x:String>
-
+    <x:String x:Key="Approve">&#xE73E;</x:String>
 </ResourceDictionary>
